Fix not showing icons

--- a/css/createtournament.css
+++ b/css/createtournament.css
@@ -1,6 +1,4 @@
 .jumbotron{
-    padding:70px 30px 70px 30px;
-    margin:0px auto;
     background: #a3c2c2;
     color:floralwhite;
 }
@@ -10,7 +8,11 @@
      background: #666633;
 }
 
-.row-header{
-    margin:0px auto;
-    padding:0px auto;
+
+div {
+  font-size: 3vmin;
+}
+
+label{
+  font-size: 3vmin;
 }
